[package]
name = "mini-docker-rust"
version = "0.1.0"
authors = ["user"]

[dependencies]
tokio = { version = "1.25.0", features = ["macros", "sync"] }
warp = "0.3.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.3.0", features = ["serde", "v4"] }